# multi_agents_disease_diagnosis

./: main.py  pyproject.toml  requirements.txt
agents/: diagnosis_agent.py  explainer_agent.py  lab_agent.py  memory_agent.py  symptom_analyzer_agent.py  symptom_collector_agent.py
prompt_library/: prompt.py
tests/: test_symptom_collector_agent.py
workflow/: graph_builder.py
