[project]
name = "multiagents-disease-diagnosis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-google-community[places]>=2.0.7",
    "langchain-groq>=0.3.6",
    "langchain-openai>=0.3.28",
    "langchain-tavily>=0.2.9",
    "langgraph>=0.5.3",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "streamlit>=1.47.0",
    "uvicorn>=0.35.0",
]
